--- a/c7/task2/style.css
+++ b/c7/task2/style.css
@@ -108,12 +108,12 @@ body{
     background-color: rgb(248,248,248);
 }
 
-.header input::placeholder{
+/* .header input::placeholder{
     position: relative;
     top: -1px;
     background: url(icons/search.svg) no-repeat;
     height: 30px;
-}
+} */
 
 #mail{
     position: relative;
