--- a/j11/task1/style.css
+++ b/j11/task1/style.css
@@ -1,5 +1,9 @@
 body{
     background-color: gainsboro;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
 }
 
 @font-face {
@@ -9,26 +13,29 @@ body{
 
 .container{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    background-color: black;
+    border-radius: 10px;
     width: 550px;
-    background-color: gray;
 }
 
 .clock {
     color: yellow;
     font-size: 60px;
     letter-spacing: 7px;
+    text-align: center;
     width: 550px;
     height: 100px;
     background-color: black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     font-family: Digital, 'Comic Sans MS', cursive;   
 }
 
 .date{
     font-size: 30px;
-    background-color: grey;
     color: white;
     font-family: Digital, 'Comic Sans MS', cursive;
 }
