--- a/j11/task1/style.css
+++ b/j11/task1/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gainsboro;
+    background-color: blueviolet;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,6 +28,7 @@ body{
     text-align: center;
     width: 550px;
     height: 100px;
+    margin-top: 10px;
     background-color: black;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -35,6 +36,7 @@ body{
 }
 
 .date{
+    margin-top: 10px;
     font-size: 30px;
     color: white;
     font-family: Digital, 'Comic Sans MS', cursive;
