--- a/j11/task2/style.css
+++ b/j11/task2/style.css
@@ -1,35 +1,42 @@
 * {
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-.start{
+.start {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 600px;
 }
 
-#btn1{
-    width: 100px;
+.startText{
+    position: relative;
+    top: -50px;
+}
+
+#btn1 {
+    width: 150px;
     height: 50px;
     border-radius: 10px;
     border: 3px solid gainsboro;
     background-color: cornflowerblue;
+    font-size: 20px;
     color: white;
     cursor: pointer;
 }
 
-.timer__block{
+.timer__block {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.timer{
+.timer {
     position: absolute;
     width: 150px;
     height: 50px;
@@ -40,32 +47,33 @@
     text-align: center;
 }
 
-.clicker{
-    display: flex;
+.clicker {
+    display: none;
     justify-content: center;
     align-items: center;
     height: 0px;
 }
 
-#text{
+#text {
     position: relative;
-    top: -500px; 
+    top: -450px;
     display: none;
     text-align: center;
 }
 
-#btn-circle{
+#btn-circle {
     width: 200px;
     height: 200px;
     border-radius: 100%;
     background-color: orange;
     display: none;
     position: absolute;
-    top: 250px; 
+    top: 250px;
     cursor: pointer;
 }
 
-#output{
+#output {
+    
     position: relative;
     font-size: 60px;
     text-align: center;
@@ -73,15 +81,37 @@
     background-color: orange;
     border-radius: 10px;
     border: none;
-    top: -333px; 
+    top: -333px;
     cursor: pointer;
 }
 
-#btn-circle:active{
+#btn-circle:active {
     border: 5px solid black;
 }
 
-.outText{
+.restart {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 75px;
+    top: -250px;
+}
+
+#again {
+    display: none;
+    width: 200px;
+    height: 100px;
+    border-radius: 10px;
+    font-size: 20px;
+    border: 3px solid gainsboro;
+    background-color: cornflowerblue;
+    color: white;
+    cursor: pointer;
+}
+
+.outText {
     position: absolute;
     top: 150px;
 }
