--- a/j12/style.css
+++ b/j12/style.css
@@ -160,3 +160,21 @@ body {
         transform: scale(0.5, 0.5);
     }
 }
+
+.back-to-main{
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 200px;
+    height: 75px;
+    color: white;
+    font-size: 25px;
+    background-color: blueviolet;
+    border: 5px solid blueviolet;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.back-to-main:active{
+    border: 5px solid white;
+}
